Refactor JUnit 5 assertions to AssertJ